--- a/package.json
+++ b/package.json
@@ -25,6 +25,8 @@
     "@nestjs/mapped-types": "*",
     "@nestjs/platform-express": "^10.0.0",
     "@nestjs/typeorm": "^10.0.2",
+    "@types/bcryptjs": "^2.4.6",
+    "bcryptjs": "^2.4.3",
     "mysql2": "^3.11.0",
     "nestjs-typeorm-paginate": "^4.0.4",
     "reflect-metadata": "^0.2.0",
